--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-monitor-server",
+    "start": "egg-scripts start",
     "stop": "egg-scripts stop --title=egg-server-monitor-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
